--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
     "debug": "NODE_ENV=development node app.js"
   },
   "dependencies": {
-    "africastalking": "^0.3.2",
-    "body-parser": "1.15.2",
+    "africastalking": "^0.4.3",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.1",
     "cookie-parser": "1.4.3",
-    "express": "4.14.0",
+    "express": "^4.17.1",
     "ms": "0.7.1",
     "multer": "1.2.1",
     "nedb": "^1.8.0",
     "nib": "1.1.2",
     "nodemon": "^1.15.1",
-    "pug": "2.0.0-beta6",
+    "pug": "^2.0.4",
     "request": "^2.83.0",
-    "serve-favicon": "2.3.2",
+    "serve-favicon": "^2.5.0",
     "stylus": "0.54.5",
     "underscore": "^1.8.3",
     "uuid": "^3.2.1"
